template dan logo baru

--- a/public/artwork.html
+++ b/public/artwork.html
@@ -3,7 +3,7 @@
 
     <!-- Head Section -->
     <head>
-        <title>Lontara - Artwork</title>
+        <title>Cromsom - Artwork</title>
         <link rel="shortcut icon" href="img/icon2.png" />
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -28,11 +28,11 @@
         <!-- Header Section -->
         <header class="container">
             <div class="site-heading text-center d-none d-lg-block">
-                <a href="index.html"><img class="site-logo pt-3" src="img/logo.png"></a>
+                <a href="homepage.html"><img class="site-logo pt-3" src="img/logo.png"></a>
             </div>
             <nav class="navbar navbar-expand-lg navbar-light bg-white container col-xl-6 col-lg-7 col-md-9 text-center">
                 <div class="container">
-                    <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="index.html"><img src="img/logo.png"></a>
+                    <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="homepage.html"><img src="img/logo.png"></a>
                     <button class="navbar-toggler mb-3 mt-3" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -83,9 +83,6 @@
                 </div>
             </div>
         </div>
-       <div class="container-fluid">
-           <p>mantap</p>
-       </div>
         <!-- Content End -->
 
         <!-- Footer Section -->
@@ -116,7 +113,7 @@
             </div>
             <div class="row">
                 <div class="col-md-12 text-center nopadding">
-                    &copy; <script>document.write(new Date().getFullYear());</script> Lontara
+                    &copy; <script>document.write(new Date().getFullYear());</script> Cromsom
                 </div>
             </div>
         </footer>
