--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <!-- Head Section -->
   <head>
-    <title>Lontara - Home</title>
+    <title>Cromsom - Home</title>
     <link rel="shortcut icon" href="img/icon2.png" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -132,7 +132,7 @@
           </div>
           <div class="row">
             <div class="col-md-12 text-center nopadding">
-  &copy; <script>document.write(new Date().getFullYear());</script> Lontara
+  &copy; <script>document.write(new Date().getFullYear());</script> Cromsom
             </div>
           </div>
         </div>
