--- a/public/index.html
+++ b/public/index.html
@@ -34,9 +34,9 @@
         <img class="site-logo pt-3" src="img/logo.png">
     </div>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-white container col-xl-6 col-lg-7 col-md-9 text-center">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white container col-xl-5 col-lg-6 col-md-8 text-center">
         <div class="container">
-          <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#"><img src="img/logo.png"></a>
+          <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#"><img class="img-fluid" src="img/logo.png"></a>
           <button class="navbar-toggler mb-3 mt-3" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -52,7 +52,7 @@
                     <a class="nav-link" href="contact.html">contact</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="artwork.html">artwork</a>
+                    <a class="nav-link" href="artwork.html">Funwork</a>
                 </li>
             </ul>
           </div>
@@ -103,41 +103,39 @@
     </div>
 <!-- Body Section End -->
 
-<!-- footer Section -->
-    <footer class="site-footer">
-        <div class="container">
-          <div class="row mb-5">
-            <div class="col-md-4">
-              <h3 class="reds">About</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, accusantium optio unde perferendis eum illum voluptatibus dolore tempora, consequatur minus asperiores temporibus reprehenderit.</p>
-            </div>
-            <div class="col-md-4">
-                <h3 class="reds">Contact</h3>    
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, accusantium optio unde perferendis eum illum voluptatibus dolore tempora, consequatur minus asperiores temporibus reprehenderit.</p>
-              </div>        
-                <div class="col-md-4 ">  
-                  <div class="mt-5 float-right">
-                    <form>
-                        <button type="submit" class="button_1">Subscribe</button>
-                        <input type="email" placeholder="Email">
-                    </form>
-                    <ul class="social-list list-inline">
-                        <li><a href="#"><span class="fa fa-facebook"></span></li>
-                        <li><a href="#"><span class="fa fa-instagram"></span></li>
-                    </ul>
-                  </div>
+        <!-- Footer Section -->
+        <footer class="site-footer">
+            <div class="container">
+                <div class="row mb-5">
+                    <div class="col-md-4">
+                        <h3 class="reds">About</h3>
+                        <p>We’re branding agency based in Makassar, Indonesia. We embrace our client to thrive in the challenging competition, and most importantly, is to be DIFFERENT.</p>
+                    </div>
+                    <div class="col-md-4">
+                        <h3 class="reds">Contact</h3>    
+                        <p>Makassar, Indonesia<br>cromosom.studio@gmail.com<br><br>Hj. Anne Resa C/6, Bringkanaya 90242<br> Makassar, Indonesia</p>
+                    </div>        
+                    <div class="col-md-4 ">  
+                        <div class="mt-5 float-right">
+                            <form>
+                                <button type="submit" class="button_1">Subscribe</button>
+                                <input type="email" placeholder="Email">
+                            </form>
+                            <ul class="social-list list-inline">
+                                <li><a href="#"><span class="fa fa-facebook"></span></li>
+                                <li><a href="#"><span class="fa fa-instagram"></span></li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
-              </div>
             </div>
-          </div>
-          <div class="row">
-            <div class="col-md-12 text-center nopadding">
-  &copy; <script>document.write(new Date().getFullYear());</script> Cromsom
+            <div class="row">
+                <div class="col-md-12 text-center nopadding">
+                    &copy; <script>document.write(new Date().getFullYear());</script> Cromsom
+                </div>
             </div>
-          </div>
-        </div>
-      </footer>
-<!-- footer section end -->
+        </footer>
+        <!-- Footer End -->
 
 <!-- Extension -->
       <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
