--- a/public/work.html
+++ b/public/work.html
@@ -15,7 +15,6 @@
         <link rel="stylesheet" href="fonts/fontawesome/css/font-awesome.min.css">
         <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
         <!-- Theme Style -->
@@ -27,11 +26,11 @@
         <!-- Header Section -->
         <header class="container">
             <div class="site-heading text-center d-none d-lg-block">
-                <a href="homepage.html"><img class="site-logo pt-3" src="img/logo.png"></a>
+                <img class="site-logo pt-3" src="img/logo.png">
             </div>
-            <nav class="navbar navbar-expand-lg navbar-light bg-white container col-xl-6 col-lg-7 col-md-9 text-center">
+            <nav class="navbar navbar-expand-lg navbar-light bg-white container col-xl-5 col-lg-6 col-md-8 text-center">
                 <div class="container">
-                    <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="homepage.html"><img src="img/logo.png"></a>
+                    <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#"><img class="img-fluid" src="img/logo.png"></a>
                     <button class="navbar-toggler mb-3 mt-3" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -47,7 +46,7 @@
                                 <a class="nav-link" href="contact.html">contact</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="artwork.html">artwork</a>
+                                <a class="nav-link" href="artwork.html">Funwork</a>
                             </li>
                         </ul>
                     </div>
@@ -130,11 +129,11 @@
                 <div class="row mb-5">
                     <div class="col-md-4">
                         <h3 class="reds">About</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, accusantium optio unde perferendis eum illum voluptatibus dolore tempora, consequatur minus asperiores temporibus reprehenderit.</p>
+                        <p>We’re branding agency based in Makassar, Indonesia. We embrace our client to thrive in the challenging competition, and most importantly, is to be DIFFERENT.</p>
                     </div>
                     <div class="col-md-4">
                         <h3 class="reds">Contact</h3>    
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, accusantium optio unde perferendis eum illum voluptatibus dolore tempora, consequatur minus asperiores temporibus reprehenderit.</p>
+                        <p>Makassar, Indonesia<br>cromosom.studio@gmail.com<br><br>Hj. Anne Resa C/6, Bringkanaya 90242<br> Makassar, Indonesia</p>
                     </div>        
                     <div class="col-md-4 ">  
                         <div class="mt-5 float-right">
@@ -150,11 +149,11 @@
                     </div>
                 </div>
             </div>
-                <div class="row">
-                    <div class="col-md-12 text-center nopadding">
-                        &copy; <script>document.write(new Date().getFullYear());</script> Cromsom
-                    </div>
+            <div class="row">
+                <div class="col-md-12 text-center nopadding">
+                    &copy; <script>document.write(new Date().getFullYear());</script> Cromsom
                 </div>
+            </div>
         </footer>
         <!-- Footer End -->
         
