--- a/public/workdetail.html
+++ b/public/workdetail.html
@@ -25,11 +25,11 @@
         <!-- Header Section -->
         <header class="container">
             <div class="site-heading text-center d-none d-lg-block">
-                <a href="homepage.html"><img class="site-logo pt-3" src="img/logo.png"></a>
+                <img class="site-logo pt-3" src="img/logo.png">
             </div>  
-            <nav class="navbar navbar-expand-lg navbar-light bg-white container col-xl-6 col-lg-7 col-md-9 text-center">
+            <nav class="navbar navbar-expand-lg navbar-light bg-white container col-xl-5 col-lg-6 col-md-8 text-center">
                 <div class="container">
-                    <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="homepage.html"><img src="img/logo.png"></a>
+                    <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#"><img class="img-fluid" src="img/logo.png"></a>
                     <button class="navbar-toggler mb-3 mt-3" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -45,7 +45,7 @@
                                 <a class="nav-link" href="contact.html">contact</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="artwork.html">artwork</a>
+                                <a class="nav-link" href="artwork.html">Funwork</a>
                             </li>
                         </ul>
                     </div>
@@ -88,11 +88,11 @@
                 <div class="row mb-5">
                     <div class="col-md-4">
                         <h3 class="reds">About</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, accusantium optio unde perferendis eum illum voluptatibus dolore tempora, consequatur minus asperiores temporibus reprehenderit.</p>
+                        <p>We’re branding agency based in Makassar, Indonesia. We embrace our client to thrive in the challenging competition, and most importantly, is to be DIFFERENT.</p>
                     </div>
                     <div class="col-md-4">
                         <h3 class="reds">Contact</h3>    
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, accusantium optio unde perferendis eum illum voluptatibus dolore tempora, consequatur minus asperiores temporibus reprehenderit.</p>
+                        <p>Makassar, Indonesia<br>cromosom.studio@gmail.com<br><br>Hj. Anne Resa C/6, Bringkanaya 90242<br> Makassar, Indonesia</p>
                     </div>        
                     <div class="col-md-4 ">  
                         <div class="mt-5 float-right">
