--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,46 @@
 
         <div class="row text-center text-lg-left contents">
 
-                <div class="col-md-12 nopadding">
+
+            <div class="col-md-12 nopadding grid">
+                <figure class="effect-zoe mb-0">
+                    <a href="workdetail.html" class="d-block h-100">
+                        <img class="img-fluid img-responsive gmbr" src="img/contoh project1.png" alt="">
+                        <figcaption>
+                        <div class="homepg col-md-12 pb-3 pt-3">
+                            <h3 class="" href="#">Qahwa Gayo</h3>
+                        </div>
+                        </figcaption>
+                    </a>
+                </figure>
+            </div>
+            <div class="col-md-12 nopadding grid">
+                <figure class="effect-zoe mb-0">
+                    <a href="workdetail.html" class="d-block h-100">
+                        <img class="img-fluid img-responsive gmbr" src="img/contoh project1.png" alt="">
+                        <figcaption>
+                        <div class="homepg col-md-12 pb-3 pt-3">
+                            <h3 class="" href="#">Qahwa Gayo</h3>
+                        </div>
+                        </figcaption>
+                    </a>
+                </figure>
+            </div>
+            <div class="col-md-12 nopadding grid">
+                <figure class="effect-zoe mb-0">
+                    <a href="workdetail.html" class="d-block h-100">
+                        <img class="img-fluid img-responsive gmbr" src="img/contoh project1.png" alt="">
+                        <figcaption>
+                        <div class="homepg col-md-12 pb-3 pt-3">
+                            <h3 class="" href="#">Qahwa Gayo</h3>
+                        </div>
+                        </figcaption>
+                    </a>
+                </figure>
+            </div>
+
+
+                <!-- <div class="col-md-12 nopadding">
                         <div class="">
                             <a href="workdetail.html" class="d-block h-100">
                                 <img class="img-fluid img-responsive gmbr" src="img/contoh project1.png" alt="">
@@ -96,14 +135,14 @@
                                 </div>
                             </a>
                         </div>
-                    </div>
+                    </div> -->
                     <a class="text-center viewm col-md-12 mt-4 mb-4" href="work.html">View More</a>
         </div>
 
     </div>
 <!-- Body Section End -->
 
-        <!-- Footer Section -->
+<!-- Footer Section -->
         <footer class="site-footer">
             <div class="container">
                 <div class="row mb-5">
@@ -131,16 +170,16 @@
             </div>
             <div class="row">
                 <div class="col-md-12 text-center nopadding">
-                    &copy; <script>document.write(new Date().getFullYear());</script> Cromsom
+                    &copy; <script>document.write(new Date().getFullYear());</script>Cromosom
                 </div>
             </div>
         </footer>
-        <!-- Footer End -->
+<!-- Footer End -->
 
-<!-- Extension -->
+
       <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-<!-- Extension End -->
+
   </body>
 </html>
