--- a/public/indexa.html
+++ b/public/indexa.html
@@ -36,7 +36,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-white container col-xl-5 col-lg-6 col-md-8 text-center">
         <div class="container">
-          <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#"><img class="img-fluid" src="img/logo.png"></a>
+          <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#"><img class="img-fluid img-fluid limit-icon-width" src="img/logo.png"></a>
           <button class="navbar-toggler mb-3 mt-3" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
